Fixed the way an album tile displays on mobile to do: change the way stars and tracks are displayed as well

--- a/frontend/src/components/albums/styles/album.css
+++ b/frontend/src/components/albums/styles/album.css
@@ -40,9 +40,14 @@ img {
     height:max-content;
 }
 .unClickable {
-    width:100vh;
+    width:50vh;
     justify-content: center;
-
+}
+@media only screen and (min-width: 375px) and (max-width :768px) {
+    .unClickable {
+        width:100vh;
+        justify-content: center;
+    }
 }
 
 .tracks {
